spacing fix

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5148,7 +5148,7 @@ a {
   color: #ffffff;
 }
 .cid-somIDscSra {
-  padding-top: 7rem;
+  padding-top: 8rem;
   padding-bottom: 6rem;
   background-color: #ffffff;
 }
@@ -5176,7 +5176,7 @@ a {
   width: 100%;
 }
 .cid-splBadcFUn {
-  padding-top: 2rem;
+  padding-top: 3rem;
   padding-bottom: 2rem;
   background-color: #ffffff;
 }
